<resources>
    <string name="app_name">Favors</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="notifications">Notifications</string>
    <string name="profile_text">Your profile</string>
    <string name="logout">Log out</string>
    <string name="seeyou">See you soon !</string>
    <string name="logged_in_screen">You successfully logged in !</string>
    <string name="logo">splash screen logo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_logged_in__screen">Logged_in_Screen</string>
    <string name="confirmationSent">Please check your e-mails to confirm your inscription.</string>
    <string name="resetPassword">Reset password</string>
    <string name="resendConfirmation">Resend confirmation.</string>
    <string name="favorPosterDetailViewTitle">Who is the poster?</string>
    <string name="gotit">Got it !</string>
    <string name="deleteButton">Delete account</string>
    <string name="passwordConfirmation">Please enter your password to confirm the deletion</string>
    <string name="confirmDeletionText">Confirm</string>
    <string name="userDeletionSuccessful">Your account has been successfully deleted</string>
    <string name="userDeletionFail">Sorry, a problem occured. Please try again.</string>
    <string name="wrongPassword">Wrong password. Please try again.</string>



    <string name="next">Next</string>
    <string-array name="sortBy">
        <item>sort by</item>
        <item>location</item>
        <item>recent</item>
        <item>expiring soon</item>
        <item>category</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_profile">Edit profile</string>

    <!-- PUSH NOTIFICATIONS -->
    <string name="default_notification_channel_id">CH_01</string>

    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="city">City:</string>
    <string name="sex">Sex</string>
    <string name="tokens">Tokens:</string>
    <string name="add_a_new_favor">Add a new Favor</string>
    <string name="titleFavor">Favor Title</string>
    <string name="descriptionFavor">Favor Description</string>
    <string name="locationFavor">Favor Location</string>
    <string name="deadlineFavor">Favor Deadline</string>
    <string name="imageFavor">Favor Image</string>
    <string name="addFavor">Add Favor</string>
    <string name="categoryFavor">Add Favor Category</string>
    <string name="title_activity_confirmation_sent">ConfirmationSent</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="nameFavors">Favors</string>
    <string name="buttonBubble">Done</string>

    <string name="emailNotif">Email notifications</string>
    <string name="appNotif"> App notifications </string>
    <string name="colorSetting">The main color of the app :  </string>
    colorSetting

</resources>
